# vk_interface

./: CMakeLists.txt  README.md  README.ru.md  base-kit.cmake  createInstance.cpp  createLogicalDevice.cpp  createSurface.cpp  pickPhysicalDevice.cpp  run.cpp  terminate.cpp  vk.hpp
doc/: documentation.txt
vkUtils/: base_libs.hpp  colors.hpp  vkUtils.cpp  vkUtils.hpp
